# mcdf-marketplace

./: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
docs/: API_ENDPOINTS.adoc  RELEASE_WORKFLOW.adoc  UI_DESIGN.adoc
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  local_cache.rs  main.rs  mcdf.rs  online_locations.rs  vault_manifest.rs
