[package]
name = "mcdf-marketplace"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcdf_marketplace_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mcdf-marketplace"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
blake3 = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
